# auth-service

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  dispatch.yml
src/: admin.rs  database.rs  main.rs  util.rs
src/auth_plugins/: basic_trait.rs  mod.rs
src/auth_plugins/example_auth/: mod.rs
src/auth_plugins/google_auth/: mod.rs
src/auth_plugins/telegram_auth/: mod.rs
