[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"]}
jsonwebtoken = "8.3"
log = "0.4"
const_format = "0.2"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
rusqlite = { version = "0.29", features = ["sqlcipher"]}
tokio-rusqlite = "0.4"
regex = "1.8"

[dependencies.uuid]
version = "1.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"